# TestAnithing

./: .gitignore
bmcv/bmcv_read_bm_images/: test
bmcv/bmcv_recttangle/: main.cpp
bmlib/d2d/: CMakeLists.txt  main.cpp
deepL/activate/: draw_all.ipynb
deepL/bert/: bert.py
deepL/cnn/: cnn.py  resnet.py
deepL/gan/: dcgan.py
deepL/layernorm/: layernorm.cpp
deepL/lora/: lora.py
deepL/onnx/: export_onnx.py
deepL/resnet/: resnet.py
deepL/rnn/: lstm.py
linux/docker/myapp/: README.md  docker-compose.yml  docker-compose.yml.bak
linux/docker/myapp/web/: Dockerfile  app.py
linux/make_case1/: CMakeLists.txt  main.cpp
linux/make_case1/dmain/: CMakeLists.txt  main.cpp
linux/make_install/: CMakeLists.txt
linux/so_whl/: README.md  add.cpp  add.h  pyadd.c  pyadd.cpp  pyadd.pyx  setup.py  use_add  use_add.cpp
linux/so_whl/pyadd.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
linux/so_whl2/: MANIFEST.in  README.md  __init__.py  build_whl.sh  log_profile.py  setup.py
linux/so_whl2/mytools/profile/: __main__.py
linux/so_whl3/: CMakeLists.txt  README.md  build_unix.cmake
linux/so_whl3/include/mytools/: mytool.h
linux/so_whl3/python/: MANIFEST.in  build_whl.sh  setup.py
linux/so_whl3/python/Tool/: __init__.py
linux/so_whl3/sample/: add.py
linux/so_whl3/src/: CMakeLists.txt  bind.cpp  mytool.cpp  mytool.pyi
linux/type/: type  type.cpp
llm/instruction/: alpaca_processed.jsonl  tuing.py
llm/pretrained/: pretrained.py
llm/pretrained/sanguo/: added_tokens.json  config.json  generation_config.json  merges.txt  tokenizer_config.json  vocab.json
llm/prompt/: prompt.py
llm/type/: type  type.c
opencv/bm_image/: main.cpp
opencv/cvmat/: CMakeLists.txt  main.cpp
opencv/dec_enc/: dec_enc.py
opencv/opencv_demo/: CMakeLists.txt  camera_config.json  infer_undistorted_img.cc
opencv/opencv_demo/fastdeploy-sophgo/: FastDeploy.cmake
opencv/opencv_demo/fastdeploy-sophgo/include/fastdeploy/core/: config.h
opencv/read_write/: CMakeLists.txt  dump.YUV  main.cpp  test
sail/cpp/sail_decoder_rawstream2/: main.cpp
sail/python/raw_decode/: rawstream_multithread2.py
tools/damai/: get_ticket.py
web/html_js_css_py_demo/: app.py
web/html_js_css_py_demo/static/css/: style.css
web/html_js_css_py_demo/static/js/: script.js
web/html_js_css_py_demo/templates/: index.html
